<resources>
    <string name="app_name">AMazeByChasePacker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_generating">GeneratingActivity</string>
    <string name="title_activity_play_manually">PlayManuallyActivity</string>
    <string name="title_activity_play_animation">PlayAnimationActivity</string>
    <string name="title_activity_winning">WinningActivity</string>
    <string name="title_activity_losing">LosingActivity</string>


    <string name="MazeTitle">Astro Taxi</string>
    <string name="show_walls">Show Walls</string>
    <string name="full_maze_view">Full Maze View</string>
    <string name="show_solution">Show Solution</string>
    <string name="f">F</string>
    <string name="go2win">Go2Win</string>
    <string name="b">B</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="j">J</string>
    <string name="houston_we_have_a_problem">Houston, We have a Problem. . .</string>
    <string name="java_will_decide">Java Will Decide</string>
    <string name="attempting_recovery">Attempting Recovery. . .</string>
    <string name="we_have_arrived_at_our_destination">We Have Arrived At Our Destination!</string>
    <string name="pathtext">PathText</string>
    <string name="energytext">EnergyText</string>
    <string name="return_to_title">Return to Title</string>
    <string name="show_map">Show Map</string>
    <string name="remaining_energy">Remaining Energy</string>
    <string name="map_scale">Map Scale</string>
    <string name="start_pause">Start/Pause</string>
    <string name="animation_speed">Set Animation Speed</string>
    <string name="go2losing">Go2Losing</string>
    <string name="go2winning">Go2Winning</string>
    <string name="skill_level">Choose Skill Level:</string>
    <string name="cartographer">Choose Cartographer</string>
    <string name="no_rooms">No Rooms</string>
    <string name="explore">Explore</string>
    <string name="revisit">Revisit</string>
    <string-array name="builders">
        <item>DFS</item>
        <item>Prim</item>
        <item>Boruvka</item>
    </string-array>

    <string-array name="drivers">
        <item>Choose Driver</item>
        <item>Manual</item>
        <item>Wizard</item>
        <item>JumpingWizard</item>
        <item>Wall Follower</item>
    </string-array>

    <string-array name="robotConfigs">
        <item>Premium</item>
        <item>Mediocre</item>
        <item>So so</item>
        <item>Shaky</item>
    </string-array>

</resources>