<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ManualLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starsactual"
    android:foregroundTint="#673AB7"
    tools:context=".gui.PlayAnimationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="417dp"
        android:layout_height="145dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <CheckBox
            android:id="@+id/showfullMazeView"
            android:layout_width="175dp"
            android:layout_height="50sp"
            android:layout_marginTop="1dp"
            android:text="@string/full_maze_view"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/showSolution"
            android:layout_width="170dp"
            android:layout_height="50sp"
            android:layout_marginTop="1dp"
            android:text="@string/show_solution"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showfullMazeView" />

        <CheckBox
            android:id="@+id/ShowWalls"
            android:layout_width="144dp"
            android:layout_height="50sp"
            android:layout_marginTop="99dp"
            android:text="@string/show_walls"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Decrease_Scale1"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="264dp"
            android:layout_marginTop="100dp"
            android:text="-"
            android:textColor="#A5D6A7"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Increase_Scale1"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="332dp"
            android:layout_marginTop="100dp"
            android:text="+"
            android:textColor="#A5D6A7"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Go2Win"
        android:layout_width="122dp"
        android:layout_height="84dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="628dp"
        android:text="@string/go2win"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Jump"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="616dp"
        android:text="@string/j"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Right"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="348dp"
        android:layout_marginTop="616dp"
        android:text="@string/r"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Around"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="664dp"
        android:text="@string/b"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Forward"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="568dp"
        android:text="@string/f"
        android:visibility="visible"
        app:iconTint="#EDE0E0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Left"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="616dp"
        android:text="@string/l"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <edu.wm.cs.cs301.amazebychasepacker.gui.MazePanel
        android:id="@+id/ManualPanel"
        android:layout_width="400sp"
        android:layout_height="400sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="160dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>