<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starsactual"
    tools:context=".gui.WinningActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/WinningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="serif"
        android:text="@string/we_have_arrived_at_our_destination"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFEB3B"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/WinningInfo"
        android:layout_width="359dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="252dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/PathText"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/pathtext"
            android:textColor="#CDDC39"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/EnergyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energytext"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            tools:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/WinToTitleButton"
        android:layout_width="193dp"
        android:layout_height="68dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="360dp"
        android:text="@string/return_to_title"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>